# distill

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: TODO.md  settings.json
.claude/tmp/: critic-gate-phase4-tally-2026-07-02.md  critic-gate-phase6-tally-2026-07-02.md
.github/workflows/: ci.yml
.gstack/: browse-audit.jsonl  claude-available.json
docs/: HANDOFF.md  distill-copilot-HANDOFF.md
docs/distill/: distill-audit-tracker.md  distill-audit-tracker.md.accept-cache
evals/: rubric.py  run_evals.py
evals/golden/gettysburg/: expected.json  mock_response.json  source.txt
evals/golden/tech_talk/: expected.json  mock_response.json  source.txt
evals/golden/water_cycle/: expected.json  mock_response.json  source.txt
src/distill/: __init__.py  config.py  models.py
src/distill/api/: __init__.py  app.py  ratelimit.py
src/distill/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py
src/distill/pipeline/: __init__.py  critic.py  errors.py  extract.py  orchestrator.py  structure.py  validate.py
src/distill/sources/: __init__.py  base.py  pdf.py  url.py  youtube.py
tests/: conftest.py  test_api.py  test_critic.py  test_evals.py  test_llm.py  test_models.py  test_pipeline.py  test_ratelimit.py  test_smoke.py  test_sources.py
tests/fixtures/: make_pdf.py  sample_page.html  sample_transcript.json
