[project]
name = "distill"
version = "0.1.0"
description = "Provider-agnostic agentic knowledge-ingestion service (extract -> validate -> critic -> structure)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "trafilatura>=1.9",
    "youtube-transcript-api>=0.6",
    "pypdf>=4.2",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distill"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
